--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Swift project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
-
 name: CI
 
 on:
@@ -18,5 +15,13 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: swift build -v
-    - name: Run tests
-      run: swift test -v
+
+    - name: Test & publish code coverage to Code Climate
+      uses: paambaati/codeclimate-action@v8.0.0
+      env:
+        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      with:
+        coverageCommand: swift test -v --enable-code-coverage
+        debug: true
+        coverageLocations: |
+          ${{github.workspace}}/.build/debug/codecov/*.json:lcov-json
