👷 Updated CI workflow
Set timeout, concurrency and renaming

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,14 @@ on:
   pull_request:
     branches: [ "main" ]
 
+concurrency:
+  group: "Main"
+
 jobs:
-  build:
+  test-and-gather-test-coverage:
 
     runs-on: macos-13
+    timeout-minutes: 30
 
     steps:
     - uses: actions/checkout@v4
